fixing layer icon alignment

--- a/stylesheets/map-mobile.css
+++ b/stylesheets/map-mobile.css
@@ -74,6 +74,7 @@ fieldset{
 
 #control-panel{
 	white-space: nowrap;
+	position: relative;
 }
 
 /*Map canvas stuff*/
@@ -111,7 +112,7 @@ fieldset{
 .layer-icon{
 	margin-top:-2px;
 	position: absolute;
-	right: 10px;
+	right: 0px;
 }
 .layer-label{
 	cursor:pointer;
