--- a/stylesheets/map.css
+++ b/stylesheets/map.css
@@ -82,6 +82,7 @@ fieldset{
 
 #control-panel{
 	white-space: nowrap;
+	position: relative;
 }
 
 /*Map canvas stuff*/
@@ -119,7 +120,7 @@ fieldset{
 .layer-icon{
 	margin-top:-2px;
 	position: absolute;
-	right: 10px;
+	right: 0px;
 }
 .layer-label{
 	cursor:pointer;
